--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,9 +6,8 @@
 }
 
 .form {
-  /* Centrar el formulario en la página */
   background-color: white;
-  width: 400px;
+  width: 1000px;
   padding: 20px 40px;
   position: absolute;
   top: 50%;
@@ -17,26 +16,83 @@
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
 }
 
-.inputContainer {
-  /* Ajusta el espacio entre las etiquetas y los campos de entrada según sea necesario */
-  margin-bottom: 1em;
+.label{
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  text-align: right;
 }
 
-.input {
-  top: 0px;
-  left: 0px;
-  height: 100%;
+.inputContainer,
+.descriptionContainer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  gap: 10px;
+}
+
+.inputContainer{
+  height: 40px;
+}
+
+.inputContainerQuantity{
+  width: 100%;
+  height: 40px;
+  display: grid;
+  grid-template-columns: 10% 10% 80%;
+  line-height: 40px;
+}
+
+.checkbox{
+  display: inline-block;
+  background: red;
+  border: 1px solid #DADCE0;
+  color: aqua;
+  border-radius: 25px;
+  transition: .2s all ease;
+  padding: 8px 12 px;
+  width: 20px;
+  height: 20px;
+}
+
+.checkbox input[type="checkbox"]:checked + label {
+  border: 1px solid #red;
+  background: #red;
+  color: #fff;
+}
+
+.quantityNumber{
   width: 100px;
+  height: 100%;
+  padding: 0 10px;
+  font-size: 18px;
+}
+
+.input, 
+.select,
+.descriptionInput {
+  height: 40px;
+  width: 100%;
   border: 1px solid #DADCE0;
   border-radius: 7px;
   font-size: 18px;
-  padding: 0 20px;
+  padding: 0 10px;
   outline: none;
   background: none;
 }
-/* Hide the placeholder texts (a) */
+
+.descriptionInput{
+  resize: vertical;
+  max-height: 200px;
+  min-height: 40px;
+}
 
 .input::placeholder {
   color: transparent;
@@ -131,5 +187,38 @@
   }
   to {
     transform: rotate(0deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    padding: 20px;
+  }
+
+  .label {
+    text-align: left;
+    margin-bottom: 5px;
+  }
+
+  .inputContainer,
+  .descriptionContainer {
+    grid-template-columns: 100%;
+  }
+
+  .inputContainerQuantity {
+    grid-template-columns: 100%;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 800px) {
+  .form {
+    width: 80%;
+    max-width: 600px;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1120px) {
+  .form {
+    max-width: 800px;
   }
 }
