--- a/src/app/AddProductForm.css
+++ b/src/app/AddProductForm.css
@@ -39,8 +39,9 @@
 .pageContainer{
     width: 100%;
     min-height: 100vh;
-    position: relative;
-    margin-top: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button {
