--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -5,10 +5,10 @@
     padding:0 0.5rem;
     gap: 3rem;
     margin: 0;
-    position: fixed;
     width: 100%;
-    z-index: 1000;
     background-color: #fff;
+    height: 60px;
+    margin-top: 20px;
 }
 
 .menuItems {
