--- a/src/app/AddProductForm.css
+++ b/src/app/AddProductForm.css
@@ -16,13 +16,13 @@
     cursor: pointer;
     border-color: #254b5e;
     color: #ffffff;
-    transition: background-color 0.3s, border-color 0.3s; /* Transición de color en 0.3 segundos */
+    transition: background-color 0.3s, border-color 0.3s; 
   }
   
   .plusButton:hover {
-    background-color: #a7d0d2; /* Cambio de color al hacer hover */
-    border-color: #a7d0d2; /* Cambio de color del borde al hacer hover */
-    color: #000000; /* Cambio de color del texto al hacer hover */
+    background-color: #a7d0d2; 
+    border-color: #a7d0d2;
+    color: #000000;
   }
 
 .imageButtonInput{
@@ -45,20 +45,20 @@
 }
 
 .button {
-    border: 2px solid #254b5e; /* Borde con sombra */
+    border: 2px solid #254b5e;
     border-radius: 5px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
     background-color: #254b5e;
-    color: #ffffff; /* Color inicial del texto */
-    transition: background-color 0.3s, color 0.3s; /* Transición de color en 0.3 segundos */
+    color: #ffffff;
+    transition: background-color 0.3s, color 0.3s;
     box-shadow: 0 10px 15px rgba(0,0,0,.6);
   }
   
   .button:hover {
-    border: 2px solid #a7d0d2; /* Borde con sombra */
-    background-color: #a7d0d2; /* Cambio de color al hacer hover */
-    color: #000000; /* Cambio de color del texto al hacer hover */
-    transform: scale(1.05); /* Animación de crecimiento al hacer hover */
+    border: 2px solid #a7d0d2;
+    background-color: #a7d0d2;
+    color: #000000; 
+    transform: scale(1.05);
   }
