--- a/src/app/AddProductForm.css
+++ b/src/app/AddProductForm.css
@@ -25,6 +25,27 @@
     color: #000000;
   }
 
+  .deleteButton{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    bottom: 0;
+    left: 420px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    background: #254b5e;
+    cursor: pointer;
+    border-color: #254b5e;
+    color: #ffffff;
+    transition: background-color 0.3s, border-color 0.3s; 
+}
+
+.deleteButton:hover {
+  background-color: #a7d0d2; 
+  border-color: #a7d0d2;
+  color: #000000;
+}
+
 .imageButtonInput{
     width: 85%;
 }
