refactor UI and CSS

--- a/src/css/AddProducts/AddProductForm.css
+++ b/src/css/AddProducts/AddProductForm.css
@@ -1,85 +1,7 @@
-.image-path-container{
-    width: 100%;
-    position: relative;
-    max-width: 400px;
+.addProductForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
-
-.plusButton {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border-radius: 50%;
-    border: 1px solid #000;
-    background: #254b5e;
-    cursor: pointer;
-    border-color: #254b5e;
-    color: #ffffff;
-    transition: background-color 0.3s, border-color 0.3s; 
-  }
-  
-  .plusButton:hover {
-    background-color: #a7d0d2; 
-    border-color: #a7d0d2;
-    color: #000000;
-  }
-
-  .deleteButton{
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    bottom: 0;
-    left: 420px;
-    border-radius: 50%;
-    border: 1px solid #000;
-    background: #254b5e;
-    cursor: pointer;
-    border-color: #254b5e;
-    color: #ffffff;
-    transition: background-color 0.3s, border-color 0.3s; 
-}
-
-.deleteButton:hover {
-  background-color: #a7d0d2; 
-  border-color: #a7d0d2;
-  color: #000000;
-}
-
-.imageButtonInput{
-    width: 85%;
-}
-
-.inputImage{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    gap: 10px;
-}
-
-.pageContainer{
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.button {
-    border: 2px solid #254b5e;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #254b5e;
-    color: #ffffff;
-    transition: background-color 0.3s, color 0.3s;
-    box-shadow: 0 10px 15px rgba(0,0,0,.6);
-  }
-  
-  .button:hover {
-    border: 2px solid #a7d0d2;
-    background-color: #a7d0d2;
-    color: #000000; 
-    transform: scale(1.05);
-  }
