--- a/src/css/AddProducts/GetProductForm.css
+++ b/src/css/AddProducts/GetProductForm.css
@@ -76,7 +76,8 @@ td {
 .add-button {
     margin: 15px;
     border: 10px;
-    background: rgba(243, 140, 210, 0.4);;
+    background: rgba(243, 140, 210, 0.4);
+    ;
     border-radius: 5px;
     color: #000;
     font-size: 16px;
@@ -93,7 +94,7 @@ td {
 @media screen and (max-width: 1566px) {
 
     table {
-        max-width: 1500px; 
+        max-width: 1500px;
         width: 100%;
     }
 }
@@ -101,7 +102,7 @@ td {
 @media screen and (max-width: 1490px) {
 
     table {
-        max-width: 1450px; 
+        max-width: 1450px;
         width: 100%;
     }
 }
@@ -109,7 +110,7 @@ td {
 @media screen and (max-width: 1430px) {
 
     table {
-        max-width: 1400px; 
+        max-width: 1400px;
         width: 100%;
     }
 }
@@ -117,7 +118,7 @@ td {
 @media screen and (max-width: 1380px) {
 
     table {
-        max-width: 1350px; 
+        max-width: 1350px;
         width: 100%;
     }
 }
@@ -125,7 +126,7 @@ td {
 @media screen and (max-width: 1315px) {
 
     table {
-        max-width: 1270px; 
+        max-width: 1270px;
         width: 100%;
     }
 }
@@ -133,7 +134,7 @@ td {
 @media screen and (max-width: 1245px) {
 
     table {
-        max-width: 1200px; 
+        max-width: 1200px;
         width: 100%;
     }
 }
@@ -141,7 +142,7 @@ td {
 @media screen and (max-width: 1190px) {
 
     table {
-        max-width: 1150px; 
+        max-width: 1150px;
         width: 100%;
     }
 }
@@ -149,7 +150,7 @@ td {
 @media screen and (max-width: 1115px) {
 
     table {
-        max-width: 1050px; 
+        max-width: 1050px;
         width: 100%;
         font-size: 15px;
     }
@@ -158,7 +159,7 @@ td {
 @media screen and (max-width: 1000px) {
 
     table {
-        max-width: 900px; 
+        max-width: 900px;
         width: 100%;
         font-size: 13px;
     }
@@ -169,188 +170,108 @@ td {
 }
 
 @media screen and (max-width: 870px) {
+    body {
+        padding-top: 50px;
+    }
 
     table {
-        max-width: 830px; 
-        width: 100%;
-        font-size: 11px;
-    }
-
-    .add-button {
-        font-size: 12px;
-    }
-}
-
-@media screen and (max-width: 774px) {
-
-    table {
-        max-width: 730px; 
-        width: 100%;
-        font-size: 8px;
-    }
-
-    .add-button {
-        font-size: 8px;
-    }
-}
-
-@media screen and (max-width: 628px) {
-
-    table {
-        max-width: 600px; 
-        width: 100%;
-        font-size: 7px;
-    }
-
-}
-
-
-@media screen and (max-width: 1024px) {
-
-    table {
-        max-width: 1010px; 
-        width: 100%;
-        font-size: 12px;
-    }
-
-    .image {
-        transform: translateX(20px);
-    }
-
-    .delete-button {
-        transform: translateX(15px);
-        font-size: 20px;
-        margin: 1px;
-    }
-    
-    .edit-button {
-        transform: translateX(15px);
-        font-size: 25px;
-        margin: 1px;
-    }
-
-    .size {
-        transform: translateX(25px);
-    }
-
-    .color {
-        transform: translateX(25px);
-    }
-
-    .type {
-        transform: translateX(25px);
-    }
-
-    .category {
-        transform: translateX(25px);
-    }
-
-    .price {
-        transform: translateX(25px);
-    }
-
-    .code {
-        transform: translateX(25px);
-    }
-}
-
-@media screen and (max-width: 300px) {
-
-    table {
-        max-width: 285px; 
+        margin: 0 auto;
         width: 90%;
-        font-size: 5px;
+        max-width: 700px;
+        border: 1px solid #000;
     }
 
-    .image {
-        transform: translateX(-20px);
+    tbody {
+        text-align: center;
+        background: #fff;
     }
 
-    .delete-button {
-        transform: translateX(-5px);
-        font-size: 20px;
-        margin: 1px;
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+        display: block;
     }
-    
-    .edit-button {
-        transform: translateX(-5px);
-        font-size: 25px;
-        margin: 1px;
-    }
-}
 
-@media screen and (max-width: 375px) {
+    tbody {
+        text-align: center;
+    }
 
     table {
-        max-width: 370px; 
-        width: 100%;
-        font-size: 6px;
+        margin: 0 auto;
+        width: 90%;
+        max-width: 700px;
     }
 
-    .image {
-        transform: translateX(-20px);
+    thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
     }
 
-    .delete-button {
-        transform: translateX(-5px);
-        font-size: 20px;
-        margin: 1px;
-    }
-    
-    .edit-button {
-        transform: translateX(-5px);
-        font-size: 25px;
-        margin: 1px;
-    }
-}
-
-
-@media screen and (max-width: 390px) {
-
-    table {
-        max-width: 385px; 
-        width: 100%;
-        font-size: 6px;
-    }
-
-    .image {
-        transform: translateX(-20px);
-    }
-
-    .delete-button {
-        transform: translateX(-5px);
-        font-size: 20px;
-        margin: 1px;
+    tr {
+        margin: 15px;
+        text-align: left;
     }
     
-    .edit-button {
-        transform: translateX(-5px);
-        font-size: 25px;
-        margin: 1px;
-    }
-}
 
-@media screen and (max-width: 430px) {
-
-    table {
-        max-width: 425px; 
-        width: 100%;
-        font-size: 6px;
+    td {
+        position: relative;
+        padding-left: 50%;
+        margin: 15px;
     }
 
-    .image {
-        transform: translateX(-20px);
+    td .image1 {
+        background-position: center;
+        vertical-align: middle;
     }
 
-    .delete-button {
-        transform: translateX(-5px);
-        font-size: 20px;
-        margin: 1px;
+    td:before {
+        position: absolute;
+        top: 0;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        transform: translateY(25px);
+        text-align: left;
+    }
+
+    td:nth-of-type(1):before {
+        content: "Code";
+    }
+
+    td:nth-of-type(2):before {
+        content: "Name of Product";
+    }
+
+    td:nth-of-type(3):before {
+        content: "Price";
+    }
+
+    td:nth-of-type(4):before {
+        content: "Category";
+    }
+
+    td:nth-of-type(5):before {
+        content: "Type";
+    }
+
+    td:nth-of-type(6):before {
+        content: "Color";
+    }
+
+    td:nth-of-type(7):before {
+        content: "Size";
     }
     
-    .edit-button {
-        transform: translateX(-5px);
-        font-size: 25px;
-        margin: 1px;
+    td:nth-of-type(8):before {
+        content: "Image";
+    }
+
+    td:nth-of-type(9):before {
+        content: "Action";
     }
 }
