--- a/src/css/AddProducts/FormContainer.css
+++ b/src/css/AddProducts/FormContainer.css
@@ -14,7 +14,7 @@
 
 .form__button {
   border: 2px solid #254b5e;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
@@ -35,5 +35,28 @@
 @media (max-width: 800px) {
   .form {
     width: 100%;
+  }
+
+  .title {
+    font-size: 1.5em;
+  }
+
+  .input {
+    font-size: 1.9em;
+  }
+}
+
+
+@media (max-width: 527px) {
+  .form {
+    width: 100%;
+  }
+
+  .title {
+    font-size: 1.5em;
+  }
+
+  .input {
+    font-size: 1.1em;
   }
 }
