--- a/src/css/updateProducts/updateForm.css
+++ b/src/css/updateProducts/updateForm.css
@@ -1,4 +1,4 @@
-.form {
+.formEdit {
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -12,21 +12,20 @@
     height: 100vh;
   }
   
-  .label {
+  .labelEdit {
     margin-bottom: 8px;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
   }
   
-  .input {
+  .inputEdit {
     padding: 8px;
-    width: 300px;
     margin-bottom: 16px;
     margin-left: 0.7rem;
   }
   
-  .button {
+  .buttonEdit {
     border: 2px solid #254b5e;
     border-radius: 5px;
     padding: 10px 20px;
@@ -36,15 +35,15 @@
     color: #ffffff;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.6);
   }
-  .button:hover{
+  .buttonEdit:hover{
     border: 2px solid #a7d0d2;
     background-color: #a7d0d2;
     color: #000000;
     transform: scale(1.05);
   }
-  .img{
+  .imgEdit{
     display: none;
   }
-  .title{
+  .titleEdit{
     margin-bottom: 1rem;
   }
